Fix spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -56,7 +56,3 @@ span.abstract a {
   display: inline-block;
   margin: 0 auto;
 }
-
-.featured-item {
-  margin-bottom: 20px;
-}
